# sentinel

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  generate_report.py  pyproject.toml  scheduler.py
ai/: llm.py
ai/chains/: briefing_generator.py  counter_narrative.py  narrative_extractor.py  narrative_tracker.py  risk_assessor.py  signpost_generator.py  trend_analyzer.py
ai/prompts/: templates.py
config/: local_config.example.py  overrides.py  settings.py
dashboard/: alerts.py  briefing.py  overview.py  styles.py  timeline.py
models/: schemas.py
sources/: cot.py  market.py  news.py  predictions.py  social.py  spreads.py  trends.py
storage/: narrative_store.py
tests/: test_schemas.py
