[tool.poetry]
name = "sentinel"
version = "0.1.0"
description = "AI-powered risk narrative monitor for financial markets"
authors = ["boo"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-cerebras = "^0.5"
openai = "^1.0"
feedparser = "^6.0"
yfinance = "^0.2"
fredapi = "^0.5"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
pandas = "^2.0"
plotly = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.8"
mypy = "^1.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
